--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "outDir": "./dist",
+    "module": "umd",
     "declaration": true,
     "inlineSources": false,
     "sourceMap": false
